# prospector

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
ats/: base.py  greenhouse.py  lever.py  workday.py
common/: claude_client.py  config.py  constants.py  discord.py  llm_client.py  logger.py  notion_client.py  rate_limiter.py  schemas.py
config/: answers.yaml  blacklist.yaml  config.yaml
docs/: aihawk_setup.md  getting_started.md
orchestration/: server.py
outreach/: email_finder.py  email_generator.py
scrapers/: jobspy_scraper.py  linkedin_posts.py
scripts/: aihawk_wrapper.sh  export_n8n_workflows.sh  init.py  setup_notion_db.py  weekly_summary.py
scripts/systemd/: n8n-watchdog.service  prospector-server.service
